@@ -89,4 +89,9 @@
 
                  - Fixed a problem with user interaction on Sicstus.
 
+ ? Mar 2009:   Tenth "internal public" release:
+
+                 - In "dra" activated "essence_hook" for matching with
+                   coinductive hypotheses.
+
 -------------------------------------------------------------------------------
